--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 mb-3"><div class="p-3 bg-success text-white rounded">¡Envíos a todo Mérida!<br>Entrega bajo pedido: 4 semanas</div></div>
-        <div class="col-md-6"><div class="p-3 bg-success text-white rounded">100% réplicas premium</div></div>
+        <div class="col-md-6"><div class="p-3 bg-success text-white rounded">100% premium</div></div>
       </div>
     </div>
   </section>
@@ -163,22 +163,9 @@
     <div class="container">
       <h2 class="text-center section-title">Opiniones de clientes</h2>
       <div class="row text-center">
-        <div class="col-md-4"><blockquote>"Excelente calidad, llegó rápido" – Juan</blockquote></div>
-        <div class="col-md-4"><blockquote>"Me encanta, repetiré compra" – Laura</blockquote></div>
-        <div class="col-md-4"><blockquote>"Atención 10/10" – Pedro</blockquote></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Feed Instagram -->
-  <section class="py-5">
-    <div class="container">
-      <h2 class="text-center section-title">Síguenos en Instagram</h2>
-      <div class="row g-3">
-        <div class="col-6 col-md-3"><a href="https://instagram.com/tucuenta" target="_blank"><img src="assets/img/ig1.jpg" class="img-fluid rounded" alt=""></a></div>
-        <div class="col-6 col-md-3"><a href="https://instagram.com/tucuenta" target="_blank"><img src="assets/img/ig2.jpg" class="img-fluid rounded" alt=""></a></div>
-        <div class="col-6 col-md-3"><a href="https://instagram.com/tucuenta" target="_blank"><img src="assets/img/ig3.jpg" class="img-fluid rounded" alt=""></a></div>
-        <div class="col-6 col-md-3"><a href="https://instagram.com/tucuenta" target="_blank"><img src="assets/img/ig4.jpg" class="img-fluid rounded" alt=""></a></div>
+        <div class="col-md-4"><blockquote>"Excelente calidad, llegó rápido" – @leonardo.hga</blockquote></div>
+        <div class="col-md-4"><blockquote>"Me encanta, repetiré compra" – @melvinn.poot</blockquote></div>
+        <div class="col-md-4"><blockquote>"Atención 10/10" – @lalocan.yam</blockquote></div>
       </div>
     </div>
   </section>
