--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contacto | Q Jerseys</title>
+  <title>Quintal Jerseys | Contacto</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body { font-family: 'Roboto', sans-serif; }
@@ -15,7 +15,7 @@
     }
     .whatsapp-float img { width: 60px; height: 60px; }
   </style>
-      <a href="https://wa.me/5215555555555?text=¡Hola!,%20quiero%20informes%20sobre%20las%20playeras" class="whatsapp-float" target="_blank">
+      <a href="https://wa.me/5219901183666?text=¡Hola!,%20quiero%20informes%20sobre%20las%20playeras" class="whatsapp-float" target="_blank">
       <i class="bi bi-whatsapp"></i>
     </a>
 
@@ -49,8 +49,8 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/img/logo-ejemplo.png" alt="Logo" style="width:40px; height:40px; margin-right:10px;">
-        Q Jerseys
+        <img src="assets/img/logo.png" alt="Logo" style="width:40px; height:40px; margin-right:10px;">
+        Quintal Jerseys
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -72,7 +72,7 @@
 
 <div class="alert alert-primary text-center rounded-0 mb-0" role="alert">
   ¿No encuentras la playera que buscabas? 
-  <a href="https://wa.me/5215555555555?text=Te%20mando%20una%20foto%20de%20la%20playera%20que%20quiero" class="alert-link" target="_blank">
+  <a href="https://wa.me/5219901183666?text=Te%20mando%20una%20foto%20de%20la%20playera%20que%20quiero" class="alert-link" target="_blank">
     mándanos una foto
   </a>.
 </div>
@@ -147,7 +147,7 @@
       <div class="text-center mt-5">
         <h4>Síguenos en redes sociales</h4>
         <a href="https://facebook.com/tu-pagina" target="_blank" class="btn btn-primary me-2">Facebook</a>
-        <a href="https://instagram.com/tu-pagina" target="_blank" class="btn btn-danger">Instagram</a>
+        <a href="https://www.instagram.com/quintaljerseys" target="_blank" class="btn btn-danger">Instagram</a>
       </div>
 
       <!-- Guía de tallas -->
@@ -212,7 +212,7 @@ document.getElementById('whatsappForm').addEventListener('submit', function(e){
   }
   mensaje += `\nNombre del comprador: ${comprador}\nDirección: ${direccion}`;
 
-  window.open(`https://wa.me/5215555555555?text=${encodeURIComponent(mensaje)}`, '_blank');
+  window.open(`https://wa.me/5219901183666?text=${encodeURIComponent(mensaje)}`, '_blank');
 });
 </script>
 
