--- a/ediciones-especiales.html
+++ b/ediciones-especiales.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ediciones Especiales | Q Jerseys</title>
+  <title>Quintal Jerseys | Ediciones Especiales</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body { font-family: 'Roboto', sans-serif; }
@@ -21,7 +21,7 @@
     }
     .whatsapp-float img { width: 60px; height: 60px; }
   </style>
-      <a href="https://wa.me/5215555555555?text=¡Hola!,%20quiero%20informes%20sobre%20las%20playeras" class="whatsapp-float" target="_blank">
+      <a href="https://wa.me/5219901183666?text=¡Hola!,%20quiero%20informes%20sobre%20las%20playeras" class="whatsapp-float" target="_blank">
       <i class="bi bi-whatsapp"></i>
     </a>
 
@@ -56,8 +56,8 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/img/logo-ejemplo.png" alt="Logo" style="width:40px; height:40px; margin-right:10px;">
-        Q Jerseys
+        <img src="assets/img/logo.png" alt="Logo" style="width:40px; height:40px; margin-right:10px;">
+        Quintal Jerseys
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -80,7 +80,7 @@
 <!-- BANNER -->
 <div class="alert alert-primary text-center rounded-0 mb-0" role="alert">
   ¿No encuentras la playera que buscabas? 
-  <a href="https://wa.me/5215555555555?text=Te%20mando%20una%20foto%20de%20la%20playera%20que%20quiero" class="alert-link" target="_blank">
+  <a href="https://wa.me/5219901183666?text=Te%20mando%20una%20foto%20de%20la%20playera%20que%20quiero" class="alert-link" target="_blank">
     mándanos una foto
   </a>.
 </div>
@@ -96,86 +96,244 @@
     </div>
   </div>
 
-  <!-- Colaboraciones -->
-  <div class="section-title"><h2>Colaboraciones</h2></div>
-  <div class="row g-4 catalog">
+<!-- Colaboraciones -->
+<div class="section-title"><h2>Colaboraciones</h2></div>
+<div class="row g-4 catalog">
     <div class="col-6 col-lg-3">
-      <div class="card shadow-sm">
-        <img src="assets/img/travis-oversize.jpg" class="card-img-top" alt="Travis Scott Oversize">
-        <div class="card-body">
-          <span class="badge bg-dark mb-2">Desde  MXN</span>
-<h5 class="card-title">Travis Scott Oversize</h5>
-
-
-          <a href="https://wa.me/5215555555555?text=Quiero%20Travis%20Scott%20Oversize" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
-        </div>
-      </div>
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/barcelona-2025-travisscott.jpg" class="card-img-top" alt="Barcelona × Travis Scott 2025">
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span>  
+    <h5 class="card-title">FC Barcelona × Travis Scott 2025</h5>  
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20FC%20Barcelona%20Travis%20Scott%20de%202025" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
     </div>
+    </div>
+    </div>
+
     <div class="col-6 col-lg-3">
-      <div class="card shadow-sm">
-        <img src="assets/img/travis-oversize.jpg" class="card-img-top" alt="Travis Scott Oversize">
-        <div class="card-body">
-          <span class="badge bg-dark mb-2">Desde  MXN</span>
-<h5 class="card-title">Travis Scott Oversize</h5>
-
-
-          <a href="https://wa.me/5215555555555?text=Quiero%20Travis%20Scott%20Oversize" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
-        </div>
-      </div>
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/alemania-2025-edicioncorteizstussy.jpg" class="card-img-top" alt="Alemania Corteiz × Stüssy 2025">
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span>  
+    <h5 class="card-title">Alemania × Corteiz × Stüssy 2025</h5>  
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Alemania%20Corteiz%20Stüssy%20de%202025" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
     </div>
-    <!-- Más colaboraciones -->
-  </div>
+    </div>
+    </div>
 
-  <!-- Goalkeeper -->
-  <div class="section-title"><h2>Goalkeeper</h2></div>
-  <div class="row g-4 catalog">
     <div class="col-6 col-lg-3">
-      <div class="card shadow-sm">
-        <img src="assets/img/goalkeeper-pink.jpg" class="card-img-top" alt="Portero Edición Rosa">
-        <div class="card-body">
-          <span class="badge bg-dark mb-2">Desde  MXN</span>
-<h5 class="card-title">Portero Rosa 2025</h5>
-
-          <a href="https://wa.me/5215555555555?text=Quiero%20Portero%20Rosa%202025" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
-        </div>
-      </div>
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/granada-2024-25-saiko.jpg" class="card-img-top" alt="Granada CF × Saiko 2024-25">
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span>  
+    <h5 class="card-title">Granada CF × Saiko 2024-25</h5>  
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Granada%20CF%20Saiko%20de%202024-25" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
     </div>
-    <!-- Más porteros -->
-  </div>
+    </div>
+    </div>
 
-  <!-- Lifestyle -->
-  <div class="section-title"><h2>Lifestyle</h2></div>
-  <div class="row g-4 catalog">
     <div class="col-6 col-lg-3">
-      <div class="card shadow-sm">
-        <img src="assets/img/adidas-originals.jpg" class="card-img-top" alt="Adidas Originals">
-        <div class="card-body">
-          <span class="badge bg-dark mb-2">Desde  MXN</span>
-<h5 class="card-title">Adidas Originals Algodón</h5>
-
-          <a href="https://wa.me/5215555555555?text=Quiero%20Adidas%20Originals" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
-        </div>
-      </div>
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/acmilan-2023-24-pleasures.jpg" class="card-img-top" alt="AC Milan × Pleasures 2023-24">
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span>  
+    <h5 class="card-title">AC Milan × Pleasures 2023-24</h5>  
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20AC%20Milan%20Pleasures%20de%202023-24" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
     </div>
-    <!-- Más lifestyle -->
-  </div>
+    </div>
+    </div>
+    </div>
 
-  <!-- Edición Limitada -->
-  <div class="section-title"><h2>Edición Limitada</h2></div>
-  <div class="row g-4 catalog">
+<!-- Goalkeeper -->
+<div class="section-title"><h2>Goalkeeper</h2></div>
+<div class="row g-4 catalog">
+
     <div class="col-6 col-lg-3">
-      <div class="card shadow-sm">
-        <img src="assets/img/limited-gold.jpg" class="card-img-top" alt="Edición Limitada Oro">
-        <div class="card-body">
-          <span class="badge bg-dark mb-2">Desde  MXN</span>
-<h5 class="card-title">Edición Limitada Oro</h5>
-
-          <a href="https://wa.me/5215555555555?text=Quiero%20Edición%20Limitada%20Oro" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
-        </div>
-      </div>
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/realmadrid-2025-26-portero-azul.jpg" class="card-img-top" alt="Real Madrid Portero Home Azul 2025/26"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Real Madrid – Portero Home Azul (2025/26)</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Real%20Madrid%20Portero%20Home%20Azul%20de%202025‑26" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
     </div>
-    <!-- Más edición limitada -->
-  </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/barcelona-2025-26-portero-violeta-mamba.jpg" class="card-img-top" alt="Barcelona Portero Away Violeta Kobe Mamba 2025/26"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">FC Barcelona – Portero Away Violeta (Kobe Bryant “Mamba” Collection) (2025/26)</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Barcelona%20Portero%20Away%20Violeta%20Kobe%20Bryant%20de%202025‑26" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/bayern-2025-26-portero-verde.jpg" class="card-img-top" alt="Bayern Munich Portero Home Verde 2025/26"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Bayern Munich – Portero Home Verde (2025/26)</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Bayern%20Munich%20Portero%20Home%20Verde%20de%202025‑26" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/realmadrid-2025-26-portero-gris.jpg" class="card-img-top" alt="Real Madrid Portero Third Kit Gris Charcoal 2025/26"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Real Madrid – Portero Third Kit Gris/Charcoal (2025/26)</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Real%20Madrid%20Portero%20Third%20Kit%20Gris%20Charcoal%20de%202025‑26" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+    </div>
+
+<!-- Lifestyle -->
+<div class="section-title"><h2>Lifestyle</h2></div>
+<div class="row g-4 catalog">
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/mexico-blanca-algodon.jpg" class="card-img-top" alt="México Blanca Algodón"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">México Blanca Algodón</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20México%20Blanca%20Algodón" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/realmadrid-gris-algodon.jpg" class="card-img-top" alt="Real Madrid Gris Algodón"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Real Madrid Gris Algodón</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Real%20Madrid%20Gris%20Algodón" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/argentina-azul-algodon.jpg" class="card-img-top" alt="Argentina Azul Algodón"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Argentina Azul Algodón</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Argentina%20Azul%20Algodón" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/manchesterunited-blanca-algodon.jpg" class="card-img-top" alt="Manchester United Blanca Algodón"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Manchester United Blanca Algodón</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Manchester%20United%20Blanca%20Algodón" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+    </div>
+
+<!-- Edición Limitada -->
+<div class="section-title"><h2>Edición Limitada</h2></div>
+<div class="row g-4 catalog">
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/barcelona-2025-cactusjack-black.jpg" class="card-img-top" alt="FC Barcelona × Travis Scott Black 2025"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">FC Barcelona × Travis Scott Black 2025</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20FC%20Barcelona%20Travis%20Scott%20Black%20de%202025" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/realmadrid-2023-24-y3-morado.jpg" class="card-img-top" alt="Real Madrid Y‑3 Fourth Kit 2023-24"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Real Madrid × Y‑3 Fourth Kit 2023-24</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Real%20Madrid%20Y3%20Fourth%20Kit%20de%202023-24" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/realmadrid-2025-26-prematch-baseball.jpg" class="card-img-top" alt="Real Madrid Baseball Style Pre Match 2025-26"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Real Madrid Pre Match Baseball Style 2025-26</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Real%20Madrid%20Pre%20Match%20Baseball%20Style%20de%202025-26" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/bayern-125th-aniversary.jpg" class="card-img-top" alt="Bayern Munich 125th Anniversary"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Bayern Munich 125th Anniversary</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Bayern%20Munich%20125th%20Anniversary" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/brasil-cristoredentor-rioedition.jpg" class="card-img-top" alt="Brasil Cristo Redentor Rio Edition"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Brasil Cristo Redentor Rio Edition</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Brasil%20Cristo%20Redentor%20Rio%20Edition" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/betis-2025-naruto.jpg" class="card-img-top" alt="Real Betis Naruto Special Edition 2025"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Real Betis Naruto Special Edition 2025</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Real%20Betis%20Naruto%20Special%20Edition%20de%202025" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/japon-hokusai-limitededition.jpg" class="card-img-top" alt="Japón Hokusai Limited Edition"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">Japón Hokusai Limited Edition</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Japón%20Hokusai%20Limited%20Edition" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+
+    <div class="col-6 col-lg-3">
+    <div class="card shadow-sm">
+    <img src="assets/img/edicionesespeciales/acmilan-125th-aniversary.jpg" class="card-img-top" alt="AC Milan 125th Anniversary"> 
+    <div class="card-body">  
+    <span class="badge bg-dark mb-2">Desde $500 MXN</span> 
+    <h5 class="card-title">AC Milan 125th Anniversary</h5> 
+    <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20AC%20Milan%20125th%20Anniversary" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
+    </div>
+    </div>
+    </div>
+    </div>
 </main>
 
 <!-- FOOTER -->
