--- a/guia-de-tallas.html
+++ b/guia-de-tallas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Guía de Tallas | Q Jerseys</title>
+  <title>Quintal Jerseys | Guía de Tallas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -11,8 +11,8 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/img/logo-ejemplo.png" alt="Logo" style="width:40px; height:40px; margin-right:10px;">
-        Q Jerseys
+        <img src="assets/img/logo.png" alt="Logo" style="width:40px; height:40px; margin-right:10px;">
+        Quintal Jerseys
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -46,23 +46,23 @@
     <a href="#fan-hombre" class="btn btn-outline-dark btn-sm">Fan Hombre</a>
     <a href="#fan-mujer" class="btn btn-outline-dark btn-sm">Fan Mujer</a>
     <a href="#kids" class="btn btn-outline-dark btn-sm">Kids</a>
-    <a href="#retro" class="btn btn-outline-dark btn-sm">Retro y Ediciones Especiales</a>
   </div>
 
   <!-- Player -->
   <h2 id="player">Player (Unisex)</h2>
+  <h7>Se recomienda escoger una talla más a la habitual en esta edición</h7>
   <div class="table-responsive mb-5">
     <table class="table table-bordered text-center">
       <thead class="table-light">
         <tr><th>Talla</th><th>Altura (m)</th><th>Peso (kg)</th><th>Largo (cm)</th><th>Ancho (cm)</th></tr>
       </thead>
       <tbody>
-        <tr><td>S</td><td>1.60 - 1.70</td><td>50 - 60</td><td>68</td><td>46</td></tr>
-        <tr><td>M</td><td>1.70 - 1.75</td><td>60 - 70</td><td>70</td><td>50</td></tr>
-        <tr><td>L</td><td>1.75 - 1.80</td><td>70 - 80</td><td>72</td><td>54</td></tr>
-        <tr><td>XL</td><td>1.80 - 1.85</td><td>80 - 90</td><td>74</td><td>58</td></tr>
-        <tr><td>XXL</td><td>1.85 - 1.90</td><td>90 - 100</td><td>76</td><td>62</td></tr>
-        <tr><td>XXXL</td><td>1.90+</td><td>100+</td><td>78</td><td>66</td></tr>
+        <tr><td>S</td><td>1.62 - 1.70</td><td>50 - 62</td><td>67 - 69</td><td>49 - 51</td></tr>
+        <tr><td>M</td><td>1.70 - 1.76</td><td>62 - 78</td><td>69 - 71</td><td>51 - 53</td></tr>
+        <tr><td>L</td><td>1.76 - 1.82</td><td>78 - 83</td><td>71 - 73</td><td>53 - 55</td></tr>
+        <tr><td>XL</td><td>1.82 - 1.90</td><td>83 - 90</td><td>73 - 76</td><td>55 - 57</td></tr>
+        <tr><td>XXL</td><td>1.90 - 1.95</td><td>90 - 97</td><td>76 - 78</td><td>57 - 60</td></tr>
+        <tr><td>XXXL</td><td>1.95+</td><td>97+</td><td>78 - 79</td><td>60 - 63</td></tr>
       </tbody>
     </table>
   </div>
@@ -75,13 +75,13 @@
         <tr><th>Talla</th><th>Altura (m)</th><th>Peso (kg)</th><th>Largo (cm)</th><th>Ancho (cm)</th></tr>
       </thead>
       <tbody>
-        <tr><td>S</td><td>1.65 - 1.70</td><td>55 - 65</td><td>70</td><td>48</td></tr>
-        <tr><td>M</td><td>1.70 - 1.75</td><td>65 - 75</td><td>72</td><td>52</td></tr>
-        <tr><td>L</td><td>1.75 - 1.80</td><td>75 - 85</td><td>74</td><td>56</td></tr>
-        <tr><td>XL</td><td>1.80 - 1.85</td><td>85 - 95</td><td>76</td><td>60</td></tr>
-        <tr><td>XXL</td><td>1.85 - 1.90</td><td>95 - 105</td><td>78</td><td>64</td></tr>
-        <tr><td>XXXL</td><td>1.90 - 1.95</td><td>105 - 115</td><td>80</td><td>68</td></tr>
-        <tr><td>XXXXL</td><td>1.95+</td><td>115+</td><td>82</td><td>72</td></tr>
+        <tr><td>S</td><td>1.62 - 1.70</td><td>50 - 62</td><td>69 - 71</td><td>53 - 55</td></tr>
+        <tr><td>M</td><td>1.70 - 1.76</td><td>62 - 78</td><td>71 - 73</td><td>55 - 57</td></tr>
+        <tr><td>L</td><td>1.76 - 1.82</td><td>78 - 83</td><td>73 - 75</td><td>57 - 58</td></tr>
+        <tr><td>XL</td><td>1.82 - 1.90</td><td>83 - 90</td><td>75 - 78</td><td>58 - 60</td></tr>
+        <tr><td>XXL</td><td>1.90 - 1.95</td><td>90 - 97</td><td>78 - 81</td><td>60 - 62</td></tr>
+        <tr><td>XXXL</td><td>1.95 - 1.97</td><td>97 - 104</td><td>81 - 83</td><td>62 - 64</td></tr>
+        <tr><td>XXXXL</td><td>1.97+</td><td>104+</td><td>83 - 85</td><td>64 - 65</td></tr>
       </tbody>
     </table>
   </div>
@@ -94,46 +94,48 @@
         <tr><th>Talla</th><th>Altura (m)</th><th>Peso (kg)</th><th>Largo (cm)</th><th>Ancho (cm)</th></tr>
       </thead>
       <tbody>
-        <tr><td>S</td><td>1.55 - 1.60</td><td>45 - 55</td><td>62</td><td>44</td></tr>
-        <tr><td>M</td><td>1.60 - 1.65</td><td>55 - 60</td><td>64</td><td>46</td></tr>
-        <tr><td>L</td><td>1.65 - 1.70</td><td>60 - 70</td><td>66</td><td>48</td></tr>
-        <tr><td>XL</td><td>1.70 - 1.75</td><td>70 - 80</td><td>68</td><td>50</td></tr>
+        <tr><td>S</td><td>1.50 - 1.60 </td><td>45 - 55</td><td>61 - 63</td><td>40 - 41</td></tr>
+        <tr><td>M</td><td>1.60 - 1.65</td><td>55 - 60</td><td>63 - 66</td><td>41 - 44</td></tr>
+        <tr><td>L</td><td>1.65 - 1.70</td><td>60 - 70</td><td>66 - 69</td><td>44 - 47</td></tr>
+        <tr><td>XL</td><td>1.70 - 1.75</td><td>70 - 80</td><td>69 - 71</td><td>47 - 50</td></tr>
       </tbody>
     </table>
   </div>
 
   <!-- Kids -->
   <h2 id="kids">Kids</h2>
+  </div>
+  <h5>Playera</h5>
   <div class="table-responsive mb-5">
     <table class="table table-bordered text-center">
       <thead class="table-light">
-        <tr><th>Talla</th><th>Edad (años)</th><th>Altura (m)</th><th>Largo (cm)</th><th>Ancho (cm)</th></tr>
+        <tr><th>Talla</th><th>Edad (años)</th><th>Altura (cm)</th><th>Largo (cm)</th><th>Ancho (cm)</th></tr>
       </thead>
       <tbody>
-        <tr><td>XXS</td><td>4-5</td><td>1.00 - 1.10</td><td>46</td><td>34</td></tr>
-        <tr><td>XS</td><td>6-7</td><td>1.10 - 1.20</td><td>50</td><td>36</td></tr>
-        <tr><td>S</td><td>8-9</td><td>1.20 - 1.30</td><td>54</td><td>38</td></tr>
-        <tr><td>M</td><td>10-11</td><td>1.30 - 1.40</td><td>58</td><td>40</td></tr>
-        <tr><td>L</td><td>12-13</td><td>1.40 - 1.50</td><td>62</td><td>42</td></tr>
-        <tr><td>XL</td><td>14-15</td><td>1.50 - 1.60</td><td>66</td><td>44</td></tr>
-        <tr><td>XXL</td><td>16</td><td>1.60 - 1.65</td><td>70</td><td>46</td></tr>
+        <tr><td>XXS</td><td>3-4</td><td>95 - 105</td><td>44</td><td>35</td></tr>
+        <tr><td>XS</td><td>4-5</td><td>105 - 115</td><td>47</td><td>37</td></tr>
+        <tr><td>S</td><td>5-6</td><td>115 - 125</td><td>50</td><td>39</td></tr>
+        <tr><td>M</td><td>7-8</td><td>125 - 135</td><td>53</td><td>41</td></tr>
+        <tr><td>L</td><td>8-9</td><td>135 - 145</td><td>56</td><td>43</td></tr>
+        <tr><td>XL</td><td>10-11</td><td>145 - 155</td><td>59</td><td>45</td></tr>
+        <tr><td>XXL</td><td>12-13</td><td>155 - 165</td><td>62</td><td>47</td></tr>
       </tbody>
     </table>
-  </div>
 
-  <!-- Retro y Ediciones Especiales -->
-  <h2 id="retro">Retro y Ediciones Especiales</h2>
+  <h5>Short</h5>
   <div class="table-responsive mb-5">
     <table class="table table-bordered text-center">
       <thead class="table-light">
         <tr><th>Talla</th><th>Altura (m)</th><th>Peso (kg)</th><th>Largo (cm)</th><th>Ancho (cm)</th></tr>
       </thead>
       <tbody>
-        <tr><td>S</td><td>1.60 - 1.70</td><td>50 - 60</td><td>68</td><td>46</td></tr>
-        <tr><td>M</td><td>1.70 - 1.75</td><td>60 - 70</td><td>70</td><td>50</td></tr>
-        <tr><td>L</td><td>1.75 - 1.80</td><td>70 - 80</td><td>72</td><td>54</td></tr>
-        <tr><td>XL</td><td>1.80 - 1.85</td><td>80 - 90</td><td>74</td><td>58</td></tr>
-        <tr><td>XXL</td><td>1.85 - 1.90</td><td>90 - 100</td><td>76</td><td>62</td></tr>
+        <tr><td>XXS</td><td>3-4</td><td>95 - 105</td><td>32</td><td>20 - 37</td></tr>
+        <tr><td>XS</td><td>4-5</td><td>105 - 115</td><td>34</td><td>21 - 39</td></tr>
+        <tr><td>S</td><td>5-6</td><td>115 - 125</td><td>36</td><td>22 - 41</td></tr>
+        <tr><td>M</td><td>7-8</td><td>125 - 135</td><td>38</td><td>23 - 42</td></tr>
+        <tr><td>L</td><td>8-9</td><td>135 - 145</td><td>39</td><td>24 - 44</td></tr>
+        <tr><td>XL</td><td>10-11</td><td>145 - 155</td><td>40</td><td>25 - 47</td></tr>
+        <tr><td>XXL</td><td>12-13</td><td>155 - 165</td><td>43</td><td>26 - 50</td></tr>
       </tbody>
     </table>
   </div>
