--- a/nuevos-lanzamientos.html
+++ b/nuevos-lanzamientos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nuevos Lanzamientos | Q Jerseys</title>
+  <title>Quintal Jerseys | Nuevos Lanzamientos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body { font-family: 'Roboto', sans-serif; }
@@ -21,7 +21,7 @@
     }
     .whatsapp-float img { width: 60px; height: 60px; }
   </style>
-      <a href="https://wa.me/5215555555555?text=¡Hola!,%20quiero%20informes%20sobre%20las%20playeras" class="whatsapp-float" target="_blank">
+      <a href="https://wa.me/5219901183666?text=¡Hola!,%20quiero%20informes%20sobre%20las%20playeras" class="whatsapp-float" target="_blank">
       <i class="bi bi-whatsapp"></i>
     </a>
 
@@ -56,8 +56,8 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/img/logo-ejemplo.png" alt="Logo" style="width:40px; height:40px; margin-right:10px;">
-        Q Jerseys
+        <img src="assets/img/logo.png" alt="Logo" style="width:40px; height:40px; margin-right:10px;">
+        Quintal Jerseys
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -80,7 +80,7 @@
 <!-- BANNER -->
 <div class="alert alert-primary text-center rounded-0 mb-0" role="alert">
   ¿No encuentras la playera que buscabas? 
-  <a href="https://wa.me/5215555555555?text=Te%20mando%20una%20foto%20de%20la%20playera%20que%20quiero" class="alert-link" target="_blank">
+  <a href="https://wa.me/5219901183666?text=Te%20mando%20una%20foto%20de%20la%20playera%20que%20quiero" class="alert-link" target="_blank">
     mándanos una foto
   </a>.
 </div>
@@ -99,61 +99,113 @@
   <!-- Últimas de clubes -->
   <div class="section-title"><h2>Últimas de Clubes</h2></div>
   <div class="row g-4 catalog">
-    <div class="col-6 col-lg-3">
-      <div class="card shadow-sm">
-        <img src="assets/img/barcelona-2025-alt.jpg" class="card-img-top" alt="Barcelona 2025 Alternativa">
-        <div class="card-body">
-          <h5 class="card-title">Barcelona 2025 Alternativa</h5>
-          <a href="https://wa.me/5215555555555?text=Quiero%20Barcelona%202025%20Alternativa" 
-             target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-6 col-lg-3">
-      <div class="card shadow-sm">
-        <img src="assets/img/real-madrid-2025-special.jpg" class="card-img-top" alt="Real Madrid 2025 Special">
-        <div class="card-body">
-          <h5 class="card-title">Real Madrid 2025 Edición Especial</h5>
-          <a href="https://wa.me/5215555555555?text=Quiero%20Real%20Madrid%202025%20Especial" 
-             target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-6 col-lg-3">
-      <div class="card shadow-sm">
-        <img src="assets/img/manchester-2025-alt.jpg" class="card-img-top" alt="Manchester 2025 Alternativa">
-        <div class="card-body">
-          <h5 class="card-title">Manchester 2025 Alternativa</h5>
-          <a href="https://wa.me/5215555555555?text=Quiero%20Manchester%202025%20Alternativa" 
-             target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
-        </div>
-      </div>
-    </div>
+            <div class="col-6 col-lg-3">
+                <div class="card shadow-sm">
+                              <span class="badge position-absolute top-0 start-0 m-2 bg-danger">Nuevo</span>
+                    <img src="assets/img/temp2526/barcelona-visitante.jpg" class="card-img-top" alt="Barcelona Visitante">
+                    <div class="card-body">
+                        <span class="badge bg-dark mb-2">Desde $400 MXN</span>
+
+<h5 class="card-title">Barcelona Visitante</h5>
+
+                        <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Barcelona%20Visitante%2025-26" target="_blank" class="btn btn-success">Pedir por WhatsApp</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-lg-3">
+                <div class="card shadow-sm">
+                              <span class="badge position-absolute top-0 start-0 m-2 bg-danger">Nuevo</span>
+                    <img src="assets/img/temp2526/realmadrid-alternativa.jpg" class="card-img-top" alt="Real Madrid Alternativa">
+                    <div class="card-body">
+                        <span class="badge bg-dark mb-2">Desde $400 MXN</span>
+
+<h5 class="card-title">Real Madrid Alternativa</h5>
+
+                        <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Real%20Madrid%20Alternativa%2025-26" target="_blank" class="btn btn-success">Pedir por WhatsApp</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-lg-3">
+                <div class="card shadow-sm">
+                              <span class="badge position-absolute top-0 start-0 m-2 bg-danger">Nuevo</span>
+                    <img src="assets/img/temp2526/liverpool-local.jpg" class="card-img-top" alt="Liverpool Local">
+                    <div class="card-body">
+                        <span class="badge bg-dark mb-2">Desde $400 MXN</span>
+
+<h5 class="card-title">Liverpool Local</h5>
+
+                        <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Liverpool%20Local%2025-26" target="_blank" class="btn btn-success">Pedir por WhatsApp</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-lg-3">
+                <div class="card shadow-sm">
+                              <span class="badge position-absolute top-0 start-0 m-2 bg-danger">Nuevo</span>
+                    <img src="assets/img/temp2526/liverpool-visitante.jpg" class="card-img-top" alt="Liverpool Visitante">
+                    <div class="card-body">
+                        <span class="badge bg-dark mb-2">Desde $400 MXN</span>
+
+<h5 class="card-title">Liverpool Visitante</h5>
+
+                        <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Liverpool%20Visitante%2025-26" target="_blank" class="btn btn-success">Pedir por WhatsApp</a>
+                    </div>
+                </div>
+            </div>
+
   </div>
 
   <!-- Últimas de selecciones -->
   <div class="section-title"><h2>Últimas de Selecciones</h2></div>
   <div class="row g-4 catalog">
-    <div class="col-6 col-lg-3">
-      <div class="card shadow-sm">
-        <img src="assets/img/mexico-2025.jpg" class="card-img-top" alt="México 2025">
-        <div class="card-body">
-          <h5 class="card-title">México 2025 Local</h5>
-          <a href="https://wa.me/5215555555555?text=Quiero%20México%202025%20Local" 
-             target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-6 col-lg-3">
-      <div class="card shadow-sm">
-        <img src="assets/img/argentina-2025.jpg" class="card-img-top" alt="Argentina 2025">
-        <div class="card-body">
-          <h5 class="card-title">Argentina 2025 Visitante</h5>
-          <a href="https://wa.me/5215555555555?text=Quiero%20Argentina%202025%20Visitante" 
-             target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a>
-        </div>
-      </div>
-    </div>
+
+<div class="col-6 col-lg-3"> 
+  <div class="card shadow-sm"> 
+                <span class="badge position-absolute top-0 start-0 m-2 bg-danger">Nuevo</span>
+    <img src="assets/img/temp2526/mexico-local.jpg" class="card-img-top" alt="México local negra"> 
+    <div class="card-body">  
+      <span class="badge bg-dark mb-2">Desde $400 MXN</span> 
+      <h5 class="card-title">México 25-26 local</h5> 
+      <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20México%20local%2025-26" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a> 
+    </div> 
+  </div> 
+</div> 
+
+<div class="col-6 col-lg-3"> 
+  <div class="card shadow-sm"> 
+                <span class="badge position-absolute top-0 start-0 m-2 bg-danger">Nuevo</span>
+    <img src="assets/img/temp2526/argentina-aniversario.jpg" class="card-img-top" alt="Argentina Originals aniversario"> 
+    <div class="card-body">  
+      <span class="badge bg-dark mb-2">Desde $400 MXN</span> 
+      <h5 class="card-title">Argentina 25-26 Originals Local</h5> 
+      <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Argentina%20aniversario%2025-26" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a> 
+    </div> 
+  </div> 
+</div> 
+
+<div class="col-6 col-lg-3"> 
+  <div class="card shadow-sm"> 
+                <span class="badge position-absolute top-0 start-0 m-2 bg-danger">Nuevo</span>
+    <img src="assets/img/temp2526/portugal-local.jpg" class="card-img-top" alt="Portugal local"> 
+    <div class="card-body">  
+      <span class="badge bg-dark mb-2">Desde $400 MXN</span> 
+      <h5 class="card-title">Portugal 25-26 local</h5> 
+      <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Portugal%20local%2025-26" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a> 
+    </div> 
+  </div> 
+</div> 
+
+<div class="col-6 col-lg-3"> 
+  <div class="card shadow-sm">
+                <span class="badge position-absolute top-0 start-0 m-2 bg-danger">Nuevo</span>
+    <img src="assets/img/temp2526/alemania-aniversario.jpg" class="card-img-top" alt="Alemania Originals aniversario"> 
+    <div class="card-body">  
+      <span class="badge bg-dark mb-2">Desde $400 MXN</span> 
+      <h5 class="card-title">Alemania 25-26 Originals Local</h5> 
+      <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20la%20playera%20Alemania%20aniversario%2025-26" target="_blank" class="btn btn-success w-100">Pedir por WhatsApp</a> 
+    </div> 
+  </div> 
+</div> 
+
   </div>
 
   <!-- Próximos lanzamientos -->
@@ -161,12 +213,21 @@
   <div class="row g-4 catalog">
     <div class="col-6 col-lg-3">
       <div class="card shadow-sm">
-        <img src="assets/img/brazil-proximo.jpg" class="card-img-top" alt="Brasil 2025 Proximo">
+        <img src="assets/img/temp2526/barcelona-alternativa.jpg" class="card-img-top" alt="Barcelona Alternativa">
         <div class="card-body">
-          <h5 class="card-title">Brasil 2025 Tercera (Próximamente)</h5>
-          <span class="badge bg-warning text-dark mb-2">Preventa</span>
-          <a href="https://wa.me/5215555555555?text=Quiero%20Brasil%202025%20Preventa" 
-             target="_blank" class="btn btn-success w-100">Apartar por WhatsApp</a>
+          <h5 class="card-title">Barcelona Alternativa</h5>
+          <span class="badge bg-warning text-dark mb-2">Próximamente</span>
+          <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20apartar%20la%20playera%20Barcelona%20alternativa%2025-26" target="_blank" class="btn btn-success w-100">Apartar por WhatsApp</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-6 col-lg-3">
+      <div class="card shadow-sm">
+        <img src="assets/img/temp2526/liverpool-alternativa.jpg" class="card-img-top" alt="Liverpool Alternativa">
+        <div class="card-body">
+          <h5 class="card-title">Liverpool Alternativa</h5>
+          <span class="badge bg-warning text-dark mb-2">Próximamente</span>
+          <a href="https://wa.me/5219901183666?text=Hola,%20me%20interesa%20apartar%20la%20playera%20Liverpool%20alternativa%2025-26" target="_blank" class="btn btn-success w-100">Apartar por WhatsApp</a>
         </div>
       </div>
     </div>
