--- a/liga-mx-25-26.html
+++ b/liga-mx-25-26.html
@@ -55,10 +55,9 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
             <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/logo.png" alt="Logo" style="width:40px; height:40px; margin-right:10px;">
-                    Quintal Jerseys
-                </a>
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="assets/img/logo.png" alt="Quintal Jerseys" height="80" class="me-2">
+      </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -802,3 +801,4 @@
     </script>
 </body>
 </html>
+
